--- a/arch/arm/dts/zynq-snickerdoodle-black.dts
+++ b/arch/arm/dts/zynq-snickerdoodle-black.dts
@@ -20,15 +20,13 @@
 	};
 
 	chosen {
-		bootargs = "console=/dev/null root=/dev/mmcblk0p2 rw rootwait earlyprintk";
+		bootargs = "console=ttyPS0,115200n8 root=/dev/mmcblk0p2 rw rootwait earlyprintk";
                 linux,stdout-path = &uart0;
                 stdout-path = &uart0;
 	};
 
 	aliases {
 		serial0 = &uart0;
-		serial1 = &uart1;
-		serial2 = &uart2;
 		spi0 = &qspi;
 		mmc0 = &sdhci0;
 		mmc1 = &sdhci1;
