--- a/arch/arm/dts/zynq-snickerdoodle-black.dts
+++ b/arch/arm/dts/zynq-snickerdoodle-black.dts
@@ -17,14 +17,14 @@
 		cpu@0 {
 			operating-points = <
 				/* kHz	uV */
-				866667	1000000
-				433334	1000000
+				866666	1000000
+				433333	1000000
 			>;
 		};
 	};
 
 	chosen {
-		bootargs = "";
+		bootargs = "console=ttyPS0,115200n8 earlyprintk";
                 linux,stdout-path = &uart0;
                 stdout-path = &uart0;
 	};
@@ -130,10 +130,10 @@
                 spi-max-frequency = <50000000>;
                 #address-cells = <0x1>;
                 #size-cells = <0x1>;
-                partition@qspi-fsbl-uboot {
-                	label = "qspi-fsbl-uboot";
-                        reg = <0x0 0x100000>;
-                };
+		partition@qspi-fsbl-uboot {
+			label = "qspi-fsbl-uboot";
+			reg = <0x0 0x100000>;
+		};
                 partition@qspi-linux {
                         label = "qspi-linux";
                         reg = <0x100000 0x500000>;
