--- a/arch/arm/dts/zynq-snickerdoodle.dts
+++ b/arch/arm/dts/zynq-snickerdoodle.dts
@@ -20,7 +20,7 @@
 	};
 
 	chosen {
-                bootargs = "console=ttyPS0,115200n8 root=/dev/mmcblk0p2 rw rootwait earlyprintk";
+                bootargs = "console=ttyPS0,115200n8 earlyprintk";
                 linux,stdout-path = &uart0;
                 stdout-path = &uart0;
         };
@@ -114,6 +114,39 @@
 &qspi {
         u-boot,dm-pre-reloc;
         status = "okay";
+        is-dual = <0x0>;
+        num-cs = <0x1>;
+        xlnx,qspi-mode = <0x0>;
+
+        flash@0 {
+                compatible = "n25q128a11";
+                reg = <0x0>;
+                spi-tx-bus-width = <0x1>;
+                spi-rx-bus-width = <0x4>;
+                spi-max-frequency = <50000000>;
+                #address-cells = <0x1>;
+                #size-cells = <0x1>;
+                partition@qspi-fsbl-uboot {
+                        label = "qspi-fsbl-uboot";
+                        reg = <0x0 0x100000>;
+                };
+                partition@qspi-linux {
+                        label = "qspi-linux";
+                        reg = <0x100000 0x500000>;
+                };
+                partition@qspi-device-tree {
+                        label = "qspi-device-tree";
+                        reg = <0x600000 0x20000>;
+                };
+                partition@qspi-rootfs {
+                        label = "qspi-rootfs";
+                        reg = <0x620000 0x5e0000>;
+                };
+                partition@qspi-bitstream {
+                        label = "qspi-bitstream";
+                        reg = <0xc00000 0x400000>;
+                };
+        };
 };
 
 &devcfg {
