--- a/arch/arm/dts/zynq-snickerdoodle.dts
+++ b/arch/arm/dts/zynq-snickerdoodle.dts
@@ -15,12 +15,16 @@
 
 	cpus {
 		cpu@0 {
-			operating-points = <0xA2C2B 0xF4240 0x51616 0xF4240>; /* <666666 1000000 333333 1000000> */
+			operating-points = <
+				/* kHz	uV */
+				666667	1000000
+				333334	1000000
+			>;
 		};
 	};
 
 	chosen {
-                bootargs = "console=ttyPS0,115200n8 earlyprintk";
+                bootargs = "console=ttyPS0,115200n8 earlyprintk ramdisk_size=0x8F0000";
                 linux,stdout-path = &uart0;
                 stdout-path = &uart0;
         };
@@ -34,7 +38,7 @@
 
 	memory {
 		device_type = "memory";
-		reg = <0x0 0x20000000>;
+		reg = <0x0 0x40000000>;
 	};
 
 	wlan_en_reg: fixedregulator@1 {
@@ -116,7 +120,7 @@
         status = "okay";
         is-dual = <0x0>;
         num-cs = <0x1>;
-        xlnx,qspi-mode = <0x0>;
+        xlnx,qspi-mode = <0x1>;
 
         flash@0 {
                 compatible = "n25q128a11";
@@ -128,27 +132,24 @@
                 #size-cells = <0x1>;
                 partition@qspi-fsbl-uboot {
                         label = "qspi-fsbl-uboot";
-                        reg = <0x0 0x100000>;
+                        reg = <0x0 0x80000>;
                 };
                 partition@qspi-linux {
                         label = "qspi-linux";
-                        reg = <0x100000 0x500000>;
+                        reg = <0x80000 0x400000>;
                 };
                 partition@qspi-device-tree {
                         label = "qspi-device-tree";
-                        reg = <0x600000 0x20000>;
+                        reg = <0x480000 0x10000>;
                 };
                 partition@qspi-rootfs {
                         label = "qspi-rootfs";
-                        reg = <0x620000 0x5e0000>;
+                        reg = <0x490000 0x8f0000>;
                 };
                 partition@qspi-bitstream {
                         label = "qspi-bitstream";
-                        reg = <0xc00000 0x400000>;
+                        reg = <0xd80000 0x280000>;
                 };
         };
 };
 
-&devcfg {
-	syscon = <&slcr>;
-};
